# RED-AGENT-GOV

./: .env.example  CHANGELOG.md  LICENSE  README.md  RED script.py  RED_AGENT_README.md  SECURITY.md  agent.py  audit.py  constants.py  crypto.py  dashboard.html  demo.py  entropy.py  fsm.py  gate.py  index.html  intelligence.py  main.py  pyproject.toml  recovery.py  red_script.py  secure_memory.py  serialization.py  settings.py  tasking.py  test_gate_compliance.py  timing.py
.github/workflows/: python-package.yml  secrets-deploy.yml
red_agent/: __init__.py  agent.py  constants.py
red_agent/config/: __init__.py  settings.py
red_agent/core/: __init__.py  audit.py  constants.py  directives.py  fsm.py  gate.py  initialization.py  intelligence.py  recovery.py  tasking.py  teardown.py
red_agent/utils/: __init__.py  crypto.py  entropy.py  serialization.py
tests/: test_gate.py  test_gate_compliance.py  test_utils.py
