[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-agent"
version = "3.0.0"
description = "Governance-enforced Python agent engine for adversarial environments. Six-directive output gate, deterministic FSM, hash-chained audit, and cryptographic teardown."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Curtis Farrar", email = "curtis@powder-ranger.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["security", "agent", "governance", "adversarial", "cryptography"]

[project.urls]
Homepage = "https://github.com/POWDER-RANGER/red-agent"
Repository = "https://github.com/POWDER-RANGER/red-agent.git"
"Bug Tracker" = "https://github.com/POWDER-RANGER/red-agent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "black>=23.0.0",
    "types-psutil",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["red_agent*"]

# ──────────────────────────────────────────────────────────────────────────────
# Ruff — Fast Python linter (replacement for flake8 + isort + pyupgrade)
# ──────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 88
src = ["red_agent"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]
"tests/**" = ["ARG", "PLR", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["red_agent"]
force-single-line = true
lines-after-imports = 2

# ──────────────────────────────────────────────────────────────────────────────
# Mypy — Static type checking
# ──────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = false
show_error_codes = true

[tool.mypy-tests."*"]
disable_error_code = ["no-untyped-def"]

# ──────────────────────────────────────────────────────────────────────────────
# Black — Code formatting
# ──────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = "\\.pyi?$"
extend-exclude = "^(build|dist|output)/"

# ──────────────────────────────────────────────────────────────────────────────
# Pytest — Test framework
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ──────────────────────────────────────────────────────────────────────────────
# Coverage — Code coverage
# ──────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["red_agent"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
    "@abstractmethod",
]
show_missing = true
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
